# qpagedproxymodel

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
src/: CMakeLists.txt  coverage.cmake  qpagedproxymodel.cpp  qpagedproxymodel.h  qpagedproxymodel_p.h
tests/: CMakeLists.txt  test_qpagedproxymodel_source_10x10.cpp  test_qpagedproxymodel_source_10x10.h  tests_qpagedproxymodel.cpp  tests_qpagedproxymodel.h
